objects/datamask__DataMask_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>datamask__Aborting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aborting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datamask__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datamask__Anonymize_Case_Comments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymize Case Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datamask__Created_By__c</fullName>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>datamask__Delete_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datamask__Delete_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datamask__Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Last_Edit_By__c</fullName>
        <label>Last Edit By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Last_Edit__c</fullName>
        <label>Last Edit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>datamask__Last_Prepped_Date__c</fullName>
        <label>Last Prepped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>datamask__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>datamask__Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Sandbox_Name__c</fullName>
        <label>Sandbox Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Security_Token__c</fullName>
        <label>Security Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datamask__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Hidden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>datamask__Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DataMask Configuration</label>
    <pluralLabel>DataMask Configurations</pluralLabel>
</CustomObject>